@@ -345,17 +345,26 @@ def installAddon(addon_id):
         infoDialog('{0} is already installed'.format(addon_id), sound=True)
 
 
-def clean_settings():
+def clean_settings():#Fen code
     import xml.etree.ElementTree as ET
+    kodi_version = int(getKodiVersion())
     def _make_content(dict_object):
-        content = '<settings version="2">'
-        for item in dict_object:
-            if item['id'] in active_settings:
-                if 'default' in item and 'value' in item: content += '\n    <setting id="%s" default="%s">%s</setting>' % (item['id'], item['default'], item['value'])
-                elif 'default' in item: content += '\n    <setting id="%s" default="%s"></setting>' % (item['id'], item['default'])
-                elif 'value' in item: content += '\n    <setting id="%s">%s</setting>' % (item['id'], item['value'])
-                else: content += '\n    <setting id="%s"></setting>'
-            else: removed_settings.append(item)
+        if kodi_version >= 18:
+            content = '<settings version="2">'
+            for item in dict_object:
+                if item['id'] in active_settings:
+                    if 'default' in item and 'value' in item: content += '\n    <setting id="%s" default="%s">%s</setting>' % (item['id'], item['default'], item['value'])
+                    elif 'default' in item: content += '\n    <setting id="%s" default="%s"></setting>' % (item['id'], item['default'])
+                    elif 'value' in item: content += '\n    <setting id="%s">%s</setting>' % (item['id'], item['value'])
+                    else: content += '\n    <setting id="%s"></setting>'
+                else: removed_settings.append(item)
+        else:
+            content = '<settings>'
+            for item in dict_object:
+                if item['id'] in active_settings:
+                    if 'value' in item: content += '\n    <setting id="%s" value="%s" />' % (item['id'], item['value'])
+                    else: content += '\n    <setting id="%s" value="" />' % item['id']
+                else: removed_settings.append(item)
         content += '\n</settings>'
         return content
     try:
@@ -364,21 +373,23 @@ def clean_settings():
             active_settings = []
             current_user_settings = []
             addon = xbmcaddon.Addon(id=addon_id)
-            addon_name = addon.getAddonInfo('name')
             addon_dir = xbmc.translatePath(addon.getAddonInfo('path'))
             profile_dir = xbmc.translatePath(addon.getAddonInfo('profile'))
+            addon_name = addon.getAddonInfo('name')
             active_settings_xml = os.path.join(addon_dir, 'resources', 'settings.xml')
             root = ET.parse(active_settings_xml).getroot()
             for item in root.findall('./category/setting'):
                 setting_id = item.get('id')
-                if setting_id: active_settings.append(setting_id)
+                if setting_id:
+                    active_settings.append(setting_id)
             settings_xml = os.path.join(profile_dir, 'settings.xml')
             root = ET.parse(settings_xml).getroot()
             for item in root:
                 dict_item = {}
                 setting_id = item.get('id')
                 setting_default = item.get('default')
-                setting_value = item.text
+                if kodi_version >= 18: setting_value = item.text
+                else: setting_value = item.get('value')
                 dict_item['id'] = setting_id
                 if setting_value: dict_item['value'] = setting_value
                 if setting_default: dict_item['default'] = setting_default
@@ -387,8 +398,8 @@ def clean_settings():
             nfo_file = xbmcvfs.File(settings_xml, 'w')
             nfo_file.write(new_content)
             nfo_file.close()
-            sleep(200)
             infoDialog(lang(32110).encode('utf-8').format(str(len(removed_settings))), heading=addon_name)
     except:
         infoDialog('Error Cleaning Settings.xml. Old settings.xml files Restored.', heading=addon_name)
+    sleep(200)
 
